Problem areas now tied to care plans, modal overflow fix, fixes on care team page, other minor fixes and visual changes

--- a/Source/Web/src/scss/globals.scss
+++ b/Source/Web/src/scss/globals.scss
@@ -13,7 +13,7 @@
 .flex { display: flex; }
 
 .alignCenter { align-items: center; }
-.alignEnd { align-items: flex-end;; }
+.alignEnd { align-items: flex-end; }
 
 .justifyCenter { justify-content: center; }
 .justifySpaceAround { justify-content: space-around; }
